--- a/containers/lists.ipynb
+++ b/containers/lists.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lists\n",
+    "# Lists - example\n",
     "\n",
-    "A list is a data structure in Python that is a mutable, or changeable, ordered sequence of elements."
+    "A list is a data structure in **Python** that is a mutable, or changeable, ordered sequence of elements.\n",
+    "\n",
+    "Here is an example of a list."
    ]
   },
   {
